--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,6 @@ compileJava {
 }
 
 repositories {
-    mavenCentral()
-
     maven {
         setName("elytrium-repo")
         setUrl("https://maven.elytrium.net/repo/")
@@ -32,6 +30,16 @@ repositories {
         setName("papermc-repo")
         setUrl("https://papermc.io/repo/repository/maven-public/")
     }
+    maven {
+        setName("aliyun-mirror")
+        setUrl("https://maven.aliyun.com/repository/public")
+    }
+    maven {
+        setName("aliyun-google-mirror")
+        setUrl("https://maven.aliyun.com/repository/google")
+    }
+    mavenCentral()
+
     maven {
         setName("opencollab-snapshot")
         setUrl("https://repo.opencollab.dev/maven-snapshots")
@@ -145,11 +153,6 @@ spotbugsMain {
     }
 }
 
-task javadocJar(type: Jar) {
-    getArchiveClassifier().set("javadoc")
-    from(javadoc)
-}
-
 task sourcesJar(type: Jar) {
     getArchiveClassifier().set("sources")
     from(sourceSets.main.getAllSource())
@@ -172,26 +175,12 @@ publishing {
         maven(MavenPublication) {
             from(getComponents().java)
 
-            artifact(javadocJar)
             artifact(sourcesJar)
         }
     }
 }
 
-javadoc {
-    getOptions().setEncoding("UTF-8")
-    getOptions().setCharSet("UTF-8")
-    getOptions().setSource("11")
-    getOptions().links("https://docs.oracle.com/en/java/javase/11/docs/api/")
-
-    // Remove "undefined" from search paths when generating javadoc for a non-modular project. (JDK-8215291)
-    if (JavaVersion.current() == JavaVersion.VERSION_11) {
-        getOptions().addBooleanOption("-no-module-directories", true)
-    }
-}
-
 artifacts {
-    archives(javadocJar)
     archives(sourcesJar)
 }
 
